ctags: use hashtable to prevent double entries

https://bugzilla.gnome.org/show_bug.cgi?id=761446